[gd_scene load_steps=2 format=3 uid="uid://c4qdr00r422xs"]

[ext_resource type="Script" path="res://addons/assembler/assembler_file_entry.gd" id="1_fk4q2"]

[node name="assembler_file_entry" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -752.0
offset_bottom = -618.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fk4q2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 7.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="FilenameLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "filename.asm
"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
alignment = 2

[node name="BuildButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Build"

[node name="SymbolsButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Symbols"

[node name="ListButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "List"

[node name="DumpButton" type="Button" parent="HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
text = "Dump"

[connection signal="pressed" from="HBoxContainer/HBoxContainer/BuildButton" to="." method="_on_build_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/SymbolsButton" to="." method="_on_symbols_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/ListButton" to="." method="_on_list_button_pressed"]
[connection signal="pressed" from="HBoxContainer/HBoxContainer/DumpButton" to="." method="_on_dump_button_pressed"]
